fix white spaces

--- a/src/main/webapp/src/app/common/growpod-page-styles.css
+++ b/src/main/webapp/src/app/common/growpod-page-styles.css
@@ -1,3 +1,16 @@
+.button {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5em 3em;
+  text-decoration: none;
+  border: none;
+  box-sizing: border-box;
+  box-shadow: inset 0 -0.6em 0 -0.35em #003353;
+  background-color: #005c80;
+  color: white;
+}
+
 .growpod-main-section {
   display: block;
   margin-top: 32px;
