--- a/src/main/webapp/src/app/create-gardens-form/create-gardens.component.css
+++ b/src/main/webapp/src/app/create-gardens-form/create-gardens.component.css
@@ -1,16 +1,3 @@
-.button {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0.5em 3em;
-  text-decoration: none;
-  border: none;
-  box-sizing: border-box;
-  box-shadow: inset 0 -0.6em 0 -0.35em #003353;
-  background-color: #005c80;
-  color: white;
-}
-
 .form {
   background-color: #00bb98;
   max-height: 450px;
